# icloud-imap-cleanup

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.json  config.local.example.json  example_gui_usage.py  icloud_imap_cleanup.py  icloud_imap_cleanup_modular.py  imap_cleanup_gui.py  pyproject.toml  setup.py  whitelist.txt
examples/: basic_usage.py  config_examples.py  enhanced_gui_demo.py  gui_demo.py
imap_cleanup/: __init__.py  cli.py  config.py  email_analyzer.py  email_processor.py  gui.py  gui_interface.py  imap_manager.py
tests/: test_config.py
