[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imap-mail-cleanup"
version = "2.0.0"
description = "Threaded email cleanup tool for iCloud IMAP with GUI support"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Generated with Claude Code"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "python-dotenv>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/username/imap-mail-cleanup"
Repository = "https://github.com/username/imap-mail-cleanup"
Issues = "https://github.com/username/imap-mail-cleanup/issues"

[project.scripts]
imap-cleanup = "imap_cleanup.cli:main"
imap-cleanup-gui = "imap_cleanup.gui:main"

[tool.setuptools.packages.find]
include = ["imap_cleanup*"]

[tool.setuptools.package-data]
imap_cleanup = ["*.json", "*.txt"]